--- a/Functions.SendEmail/local.settings.json
+++ b/Functions.SendEmail/local.settings.json
@@ -7,6 +7,6 @@
 
     "ServiceBusConnectionString": "Endpoint=sb://devarena2019.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=r6SxXLEgUgPPWCs2Yeefhmr4jnNNK/2rR4RSf0DOg90=",
     "ServiceBusEmailQueue": "devarena-mails",
-    "SENDGRID_API_KEY": "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"
+    "SENDGRID_API_KEY": "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"
   }
 }
