--- a/Functions.SendEmailTrigger/Functions.SendEmailTrigger.csproj
+++ b/Functions.SendEmailTrigger/Functions.SendEmailTrigger.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DevArena2019.SendEmail\DevArena2019.SendEmail.csproj" />
+    <ProjectReference Include="..\Functions.SendEmail\Functions.SendEmails.csproj" />
   </ItemGroup>
 
   <ItemGroup>
