--- a/Functions.SendEmail/local.settings.json
+++ b/Functions.SendEmail/local.settings.json
@@ -6,7 +6,6 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
 
     "ServiceBusConnectionString": "Endpoint=sb://devarena2019.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=r6SxXLEgUgPPWCs2Yeefhmr4jnNNK/2rR4RSf0DOg90=",
-    "ServiceBusEmailQueue": "devarena-mails",
-    "SENDGRID_API_KEY": ""
+    "ServiceBusEmailQueue": "devarena-mails"
   }
 }
